--- a/app/assets/stylesheets/mobile.sass.scss
+++ b/app/assets/stylesheets/mobile.sass.scss
@@ -197,11 +197,3 @@ $displayfont: "OPTIOliver-Display";
     font-weight: bold;
   }
 }
-
-footer {
-  font-size: 0.8em;
-  background-color: #a2c76c;
-  padding: 20px;
-  text-align: center;
-  margin-top: 38px;
-}
